Correcting and adding facebook and linkedin links

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 			<div class="col-md-10">
 				<ul class="list-inline">
 					<li class="list-inline-item">
-						<a href="https://www.linkedin.com/in/nupur-k-972112135/">
+						<a href="https://www.facebook.com/nupur.khare.96/">
 							<i class="fa fa-facebook contact-line-icon"></i>
 						</a>
 					</li>
@@ -188,7 +188,7 @@
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#">
+						<a href="http://www.linkedin.com/in/nupur-k-972112135">
 							<i class="fa fa-linkedin contact-line-icon"></i>
 						</a>
 					</li>
