--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-10">
-								<p class="hero-text">A third-year CS student focusing on neat website designs and optimized algorithms.</p>
+								<p class="hero-text">A third-year undergrad focusing on neat web designs, optimized algorithms, and analyzing the data to make precise decisions.</p>
 							</div>
 						</div>
 						<br>
@@ -62,7 +62,7 @@
 			<br>
 			<div class="row">
 				<div class="col-md-10">
-					<p class="hero-text text-center">A third-year CS student focusing on neat website designs and optimized algorithms.</p>
+					<p class="hero-text text-center">A third-year undergrad focusing on neat web designs, optimized algorithms, and analyzing the data to make precise decisions.</p>
 				</div>
 			</div>
 			<br><br>
@@ -91,7 +91,7 @@
 				<p class="about-text">
 					I am a third year undergrad student pursuing Computer Engineering. I'm a tech enthusiast, and I love building optimised solutions for problems.	I love to innovate, ideate and build technical solutions to solve common daily life problems.
 					<br><br>
-					I love to work on Data Structures and Algorithms in Python, Django, HTML5, CSS3, JavaScript.
+					I love to work on Data Structures and Algorithms in Python, analyzing and visualizing datasets and building models using ML.
 				</p>
 			</div>
 		</div>
@@ -106,6 +106,29 @@
 		</div>
 		<div class="row">
 			<div class="col-md-10">
+				<div class="experience-item-container">
+					<div class="row">
+						<div class="col-md-8 experience-item-title">
+							<i class="fa fa-briefcase"></i> Web developer Intern
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-8 experience-item-position">
+							Nifty Objects
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-8 experience-item-date">
+							March 2021 - May 2021
+						</div>
+					</div>
+					<br>
+					<div class="row">
+						<div class="col-md-10 experience-item-detail">
+							I lead a team for the adornment and creativity of my department for various events.
+						</div>
+					</div>
+				</div>
 				<div class="experience-item-container">
 					<div class="row">
 						<div class="col-md-8 experience-item-title">
