--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<br>
 					<div class="row">
 						<div class="col-md-10 experience-item-detail">
-							I lead a team for the adornment and creativity of my department for various events.
+							Worked as web developer intern.
 						</div>
 					</div>
 				</div>
