--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</div>
 				<div class="col-md-3">
 					<center>
-						<img src="./images/prof.jpg" class="img-responsive img-circle">
+						<img src="prof.jpeg" class="img-responsive img-circle">
 					</center>
 				</div>
 			</div>
